--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -15,6 +15,7 @@ RUN yarn build
 FROM nginx:alpine
 
 COPY --from=0 /app/build /usr/share/nginx/html
+COPY --from=0 /app/default.conf /etc/nginx/conf.d/default.conf
 
 WORKDIR /usr/share/nginx/html
 
